# homebrew-get

./: .gitignore  LICENSE  README.md  get.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: brew-checks.yml  npm-checks.yml  pip-checks.yml
Formula/: get.rb
homebrew_get_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
